# rust-ml-dl

./: Cargo.toml  README.md
examples/01-data-preprocessing/src/: main.rs
examples/02-linear-regression/: Cargo.toml  README.md
examples/02-linear-regression/src/: main.rs
examples/03-logistic-regression/: Cargo.toml  README.md
examples/03-logistic-regression/src/: main.rs
examples/04-k-means-clustering/: Cargo.toml  README.md
examples/04-k-means-clustering/src/: main.rs
examples/05-pca/: Cargo.toml  README.md
examples/05-pca/src/: main.rs
examples/06-decision-trees/: Cargo.toml
examples/06-decision-trees/src/: main.rs
examples/07-svm/: README.md
examples/07-svm/src/: main.rs
examples/08-gradient-descent/: Cargo.toml  README.md
examples/08-gradient-descent/src/: main.rs
examples/09-neural-network/: Cargo.toml  README.md
examples/09-neural-network/src/: main.rs
examples/10-deep-learning-basics/: Cargo.toml
examples/11-cnn/: Cargo.toml  README.md
examples/11-cnn/src/: main.rs
examples/12-rnn/: Cargo.toml  README.md
examples/12-rnn/src/: main.rs
examples/13-autoencoder/: Cargo.toml  README.md
examples/13-autoencoder/src/: main.rs
examples/14-gan/: Cargo.toml  README.md
examples/14-gan/src/: main.rs
examples/15-transformer/: Cargo.toml  README.md
examples/15-transformer/src/: main.rs
examples/16-resnet/: Cargo.toml  README.md
examples/16-resnet/src/: main.rs
examples/17-lstm-gru/: Cargo.toml  README.md
examples/17-lstm-gru/src/: main.rs
examples/18-unet/: Cargo.toml  README.md
examples/18-unet/src/: main.rs
examples/19-vae/: Cargo.toml  README.md
examples/19-vae/src/: main.rs
examples/20-diffusion/: Cargo.toml  README.md
examples/20-diffusion/src/: main.rs
examples/21-gnn/: Cargo.toml  README.md
examples/21-gnn/src/: main.rs
examples/22-attention/: Cargo.toml  README.md
examples/22-attention/src/: main.rs
examples/23-vision-transformer/: Cargo.toml  README.md
examples/23-vision-transformer/src/: main.rs
examples/24-object-detection/: Cargo.toml  README.md
examples/24-object-detection/src/: main.rs
examples/25-siamese-networks/: Cargo.toml  README.md
examples/25-siamese-networks/src/: main.rs
examples/26-reinforcement-learning/: Cargo.toml  README.md
examples/26-reinforcement-learning/src/: main.rs
examples/27-normalization/: Cargo.toml  README.md
examples/27-normalization/src/: main.rs
examples/28-regularization/: Cargo.toml  README.md
examples/28-regularization/src/: main.rs
examples/29-transfer-learning/: Cargo.toml  README.md
examples/29-transfer-learning/src/: main.rs
examples/30-seq2seq/: Cargo.toml  README.md
examples/30-seq2seq/src/: main.rs
examples/31-mixture-of-experts/: Cargo.toml  README.md
examples/31-mixture-of-experts/src/: main.rs
examples/32-meta-learning/: Cargo.toml  README.md
examples/32-meta-learning/src/: main.rs
examples/33-neural-architecture-search/: Cargo.toml  README.md
examples/33-neural-architecture-search/src/: main.rs
examples/34-time-series-forecasting/: Cargo.toml  README.md
examples/34-time-series-forecasting/src/: main.rs
examples/35-recommendation-systems/: Cargo.toml  README.md
examples/35-recommendation-systems/src/: main.rs
examples/36-anomaly-detection/: Cargo.toml  README.md
examples/36-anomaly-detection/src/: main.rs
examples/37-advanced-optimizers/: Cargo.toml  README.md
examples/37-advanced-optimizers/src/: main.rs
examples/38-model-compression/: Cargo.toml  README.md
examples/38-model-compression/src/: main.rs
examples/39-contrastive-learning/: Cargo.toml  README.md
examples/39-contrastive-learning/src/: main.rs
examples/40-masked-modeling/: Cargo.toml  README.md
examples/40-masked-modeling/src/: main.rs
examples/41-efficient-transformers/: Cargo.toml  README.md
examples/41-efficient-transformers/src/: main.rs
examples/42-diffusion-applications/: Cargo.toml  README.md
examples/42-diffusion-applications/src/: main.rs
examples/43-neural-odes/: Cargo.toml  README.md
examples/43-neural-odes/src/: main.rs
examples/44-explainability-gradcam/: Cargo.toml  README.md
examples/44-explainability-gradcam/src/: main.rs
examples/45-text-classification/: Cargo.toml  README.md
examples/45-text-classification/src/: main.rs
examples/46-data-augmentation/: Cargo.toml  README.md
examples/46-data-augmentation/src/: main.rs
examples/47-policy-gradient-ppo/: Cargo.toml  README.md
examples/47-policy-gradient-ppo/src/: main.rs
examples/48-neural-style-transfer/: Cargo.toml  README.md
examples/48-neural-style-transfer/src/: main.rs
examples/data-preprocessing/: Cargo.toml  README.md
examples/decision-trees/: README.md
examples/deep-learning-basics/: README.md
examples/deep-learning-basics/src/: main.rs
examples/svm/: Cargo.toml
